--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <body>
   <header>
     <h1>Asistencia Virtual Nora</h1>
-    <p>Tu aliada digital con estilo, organización y elegancia.</p>
+    <p>Tu aliada digital con estilo y organización.</p>
   </header>
 
   <nav>
@@ -104,7 +104,7 @@
 
   <section id="sobre-mi">
     <h2>Sobre mí</h2>
-    <p>Soy estudiante con experiencia en gestión administrativa dentro del sector construcción. Me especializo en organización, atención al cliente y soporte remoto. Mi enfoque combina responsabilidad, proactividad y buen gusto.</p>
+    <p>Experiencia en gestión administrativa. Me especializo en organización, atención al cliente y soporte remoto. Mi enfoque combina responsabilidad, proactividad y buen gusto.</p>
   </section>
 
   <section id="servicios">
@@ -115,7 +115,7 @@
     </div>
     <div class="servicio">
       <h3>📅 Manejo de agenda</h3>
-      <p>Programo tus reuniones, envío recordatorios y mantengo tu calendario al día.</p>
+      <p>Programo tus reuniones y eventos, envío recordatorios y mantengo tu calendario al día.</p>
     </div>
     <div class="servicio">
       <h3>📱 Gestión de redes sociales</h3>
@@ -131,7 +131,7 @@
     </div>
     <div class="servicio">
       <h3>📝 Edición básica de documentos</h3>
-      <p>Manejo herramientas como Word, Excel, Notion y Google Drive.</p>
+      <p>Manejo herramientas como Word, Excel, Google Drive...</p>
     </div>
   </section>
 
