--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       padding: 0;
     }
     header {
-      background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('https://images.unsplash.com/photo-1587614295999-6f3eabeb06b5?auto=format&fit=crop&w=1350&q=80') center/cover no-repeat;
+      background-color: #fcdce4;
       padding: 4rem 2rem;
       text-align: center;
-      color: white;
+      color: #802b44;
     }
     header h1 {
       font-size: 2.8rem;
@@ -36,12 +36,6 @@
       padding: 2rem;
       max-width: 900px;
       margin: auto;
-    }
-    #sobre-mi {
-      background: none;
-      color: #4a4a4a;
-      padding: 3rem 2rem;
-      border-radius: 12px;
     }
     h2 {
       color: #c15678;
@@ -150,3 +144,95 @@
     <h2>Sobre mí</h2>
     <p>Experiencia en gestión administrativa. Me especializo en organización, atención al cliente y soporte remoto. Mi enfoque combina responsabilidad, proactividad y buen gusto.</p>
   </section>
+
+  <section id="servicios">
+    <h2>Servicios</h2>
+    <div class="servicio">
+      <div class="servicio-inner">
+        <div class="servicio-front">
+          <h3>📧 Gestión de correos electrónicos</h3>
+        </div>
+        <div class="servicio-back">
+          <p>Organizo, filtro y respondo tus correos para que tú te centres en lo importante.</p>
+          <img src="https://img.icons8.com/ios/100/email.png" alt="Correo electrónico" />
+        </div>
+      </div>
+    </div>
+    <div class="servicio">
+      <div class="servicio-inner">
+        <div class="servicio-front">
+          <h3>📅 Manejo de agenda</h3>
+        </div>
+        <div class="servicio-back">
+          <p>Programo tus reuniones y eventos, envío recordatorios y mantengo tu calendario al día.</p>
+          <img src="https://img.icons8.com/ios/100/planner.png" alt="Agenda" />
+        </div>
+      </div>
+    </div>
+    <div class="servicio">
+      <div class="servicio-inner">
+        <div class="servicio-front">
+          <h3>📱 Gestión de redes sociales</h3>
+        </div>
+        <div class="servicio-back">
+          <p>Publico contenido, respondo mensajes y ayudo a mantener tu comunidad activa.</p>
+          <img src="https://img.icons8.com/ios/100/instagram-new--v1.png" alt="Redes sociales" />
+        </div>
+      </div>
+    </div>
+    <div class="servicio">
+      <div class="servicio-inner">
+        <div class="servicio-front">
+          <h3>💬 Atención al cliente</h3>
+        </div>
+        <div class="servicio-back">
+          <p>Respondo consultas vía WhatsApp, Instagram o email con rapidez y cercanía.</p>
+          <img src="https://img.icons8.com/ios/100/chat--v1.png" alt="Atención al cliente" />
+        </div>
+      </div>
+    </div>
+    <div class="servicio">
+      <div class="servicio-inner">
+        <div class="servicio-front">
+          <h3>🔎 Búsqueda de información</h3>
+        </div>
+        <div class="servicio-back">
+          <p>Realizo resúmenes e investigaciones para apoyarte en tus decisiones.</p>
+          <img src="https://img.icons8.com/ios/100/search--v1.png" alt="Búsqueda" />
+        </div>
+      </div>
+    </div>
+    <div class="servicio">
+      <div class="servicio-inner">
+        <div class="servicio-front">
+          <h3>📝 Edición básica de documentos</h3>
+        </div>
+        <div class="servicio-back">
+          <p>Manejo herramientas como Word, Excel, Google Drive y Notion.</p>
+          <img src="https://img.icons8.com/ios/100/edit--v1.png" alt="Edición" />
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="contacto">
+    <h2>Contacto</h2>
+    <p>¿Te interesa trabajar conmigo? Escríbeme un mensaje directo o por correo electrónico. Estoy lista para ayudarte a crecer.</p>
+    <div class="contact-links">
+      <a href="https://wa.me/34611478188" target="_blank">📲 WhatsApp</a>
+      <a href="https://www.instagram.com/asistenciavirtualnora" target="_blank">📸 Instagram</a>
+      <a href="mailto:asistenciavirtualnora@gmail.com">✉️ Email</a>
+    </div>
+    <form>
+      <input type="text" placeholder="Tu nombre" required>
+      <input type="email" placeholder="Tu correo electrónico" required>
+      <textarea rows="5" placeholder="Tu mensaje" required></textarea>
+      <button type="submit">Enviar</button>
+    </form>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Asistencia Virtual Nora. Elegancia y eficiencia en lo digital.</p>
+  </footer>
+</body>
+</html>
