--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       padding: 4rem 2rem;
       text-align: center;
       color: #802b44;
+      background-image: none;
     }
     header h1 {
       font-size: 2.8rem;
@@ -52,7 +53,7 @@
       width: 100%;
       height: 200px;
       text-align: center;
-      transition: transform 0.8s;
+      transition: transform 0.5s ease;
       transform-style: preserve-3d;
       cursor: pointer;
     }
@@ -230,16 +231,17 @@
 
   <section id="contacto">
     <h2>Contacto</h2>
-    <p>¿Te interesa trabajar conmigo? Escríbeme un mensaje directo o por correo electrónico. Estoy lista para ayudarte a crecer.</p>
+    <p>¿Te interesa trabajar conmigo? Escríbeme un mensaje directo o por correo electrónico, WhatsApp o Instagram. Estoy lista para ayudarte a crecer.</p>
     <div class="contact-links">
-      <a href="https://wa.me/3466478188" target="_blank">📲 WhatsApp</a>
+      <a href="https://wa.me/34611478188" target="_blank">📲 WhatsApp</a>
       <a href="https://www.instagram.com/asistenciavirtualnora" target="_blank">📸 Instagram</a>
       <a href="mailto:asistenciavirtualnora@gmail.com">✉️ Email</a>
     </div>
-    <form>
-      <input type="text" placeholder="Tu nombre" required>
-      <input type="email" placeholder="Tu correo electrónico" required>
-      <textarea rows="5" placeholder="Tu mensaje" required></textarea>
+
+    <form action="mailto:asistenciavirtualnora@gmail.com" method="POST" enctype="text/plain">
+      <input type="text" name="nombre" placeholder="Tu nombre" required>
+      <input type="email" name="email" placeholder="Tu correo electrónico" required>
+      <textarea name="mensaje" rows="5" placeholder="Tu mensaje" required></textarea>
       <button type="submit">Enviar</button>
     </form>
   </section>
