--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
       padding: 4rem 2rem;
       text-align: center;
       color: #802b44;
-      background-image: none;
     }
     header h1 {
       font-size: 2.8rem;
@@ -47,6 +46,7 @@
       border-radius: 10px;
       margin-bottom: 2rem;
       perspective: 1000px;
+      cursor: pointer;
     }
     .servicio-inner {
       position: relative;
@@ -55,7 +55,6 @@
       text-align: center;
       transition: transform 0.5s ease;
       transform-style: preserve-3d;
-      cursor: pointer;
     }
     .servicio:hover .servicio-inner {
       transform: rotateY(180deg);
@@ -231,9 +230,9 @@
 
   <section id="contacto">
     <h2>Contacto</h2>
-    <p>¿Te interesa trabajar conmigo? Escríbeme un mensaje directo o por correo electrónico, WhatsApp o Instagram. Estoy lista para ayudarte a crecer.</p>
+    <p>¿Te interesa trabajar conmigo? Escríbeme un mensaje. Estoy lista para ayudarte a crecer.</p>
     <div class="contact-links">
-      <a href="https://wa.me/34611478188" target="_blank">📲 WhatsApp</a>
+      <a href="https://wa.me/3466478188" target="_blank">📲 WhatsApp</a>
       <a href="https://www.instagram.com/asistenciavirtualnora" target="_blank">📸 Instagram</a>
       <a href="mailto:asistenciavirtualnora@gmail.com">✉️ Email</a>
     </div>
